src/test/resources/purescript_examples/failing/KindError.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('KindError')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          PsiElement(identifier)('f')
          PsiElement(whitespace)(' ')
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('One')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(TypeVar)
            PsiElement(identifier)('f')
            PsiElement(whitespace)(' ')
        PsiElement(operator)('|')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Two')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement(()('(')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('f')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
          PsiElement())(')')
          PsiElement(whitespace)('\n')
